[gd_scene load_steps=7 format=3 uid="uid://dm58o30brwpag"]

[ext_resource type="Script" path="res://Script/Dungeon5.gd" id="1_auxff"]
[ext_resource type="TileSet" uid="uid://bourpaof5g2kp" path="res://Scene/TileMap1.tres" id="1_eva3s"]
[ext_resource type="PackedScene" uid="uid://c8pnqpx6je86j" path="res://Entity/Player.tscn" id="2_sc15h"]
[ext_resource type="PackedScene" uid="uid://47tu7epargv3" path="res://Entity/color_floor.tscn" id="3_nn5kl"]
[ext_resource type="PackedScene" uid="uid://dgsoe7ra0e4qd" path="res://Entity/door.tscn" id="4_ce0g4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_depdr"]
size = Vector2(38, 76)

[node name="Dungeon5" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_auxff")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("1_eva3s")
format = 2
layer_0/name = "Ground"
layer_0/navigation_enabled = false
layer_0/tile_data = PackedInt32Array(0, 65536, 2, 65536, 65536, 2, 1, 65536, 2, 65537, 65536, 2, 131073, 65536, 2, 2, 65536, 2, 65538, 65536, 2, 131074, 262144, 0, 3, 65536, 2, 65539, 65536, 2, 131075, 65536, 2, 4, 65536, 2, 65540, 65536, 2, 131076, 65536, 2, 5, 65536, 2, 65541, 65536, 2, 131077, 65536, 2, 6, 65536, 2, 65542, 65536, 2, 131078, 65536, 2, 7, 65536, 2, 65543, 65536, 2, 131079, 65536, 2, 8, 65536, 2, 65544, 65536, 2, 131080, 65536, 2, 9, 65536, 2, 65545, 65536, 2, 131081, 65536, 2, 10, 65536, 2, 65546, 65536, 2, 131082, 65536, 2, 11, 65536, 2, 65547, 65536, 2, 131083, 65536, 2, 12, 65536, 2, 65548, 65536, 2, 131084, 65536, 2, 13, 65536, 2, 65549, 65536, 2, 14, 65536, 2, 65550, 65536, 2, 15, 65536, 2, 65551, 65536, 2, 131087, 65536, 2, 196620, 65536, 2, 262156, 65536, 2, 327692, 65536, 2, 262157, 65536, 2, 327693, 65536, 2, 262158, 65536, 2, 327694, 65536, 2, 262159, 65536, 2, 327695, 65536, 2, 196616, 65536, 2, 327688, 65536, 2, 196617, 65536, 2, 262153, 262144, 0, 327689, 65536, 2, 196618, 65536, 2, 262154, 65536, 2, 327690, 65536, 2, 196619, 65536, 2, 262155, 65536, 2, 327691, 65536, 2, 196608, 65536, 2, 262144, 65536, 2, 327680, 65536, 2, 196609, 65536, 2, 262145, 262144, 0, 327681, 262144, 0, 196610, 65536, 2, 262146, 65536, 2, 327682, 65536, 2, 196611, 65536, 2, 327683, 65536, 2, 196612, 65536, 2, 196613, 65536, 2, 262149, 65536, 2, 327685, 65536, 2, 327686, 65536, 2, 196615, 65536, 2, 327687, 65536, 2, 393216, 65536, 2, 458752, 65536, 2, 524288, 65536, 2, 393217, 65536, 2, 458753, 65536, 2, 524289, 65536, 2, 393218, 65536, 2, 458754, 65536, 2, 524290, 65536, 2, 393219, 65536, 2, 458755, 65536, 2, 524291, 65536, 2, 393220, 65536, 2, 458756, 262144, 0, 524292, 65536, 2, 393221, 65536, 2, 458757, 65536, 2, 524293, 65536, 2, 393222, 65536, 2, 458758, 262144, 0, 524294, 65536, 2, 393223, 65536, 2, 458759, 65536, 2, 524295, 65536, 2, 393224, 65536, 2, 458760, 65536, 2, 524296, 65536, 2, 393225, 65536, 2, 458761, 65536, 2, 524297, 65536, 2, 393226, 65536, 2, 458762, 65536, 2, 524298, 262144, 0, 393227, 65536, 2, 458763, 65536, 2, 524299, 65536, 2, 393228, 65536, 2, 458764, 262144, 0, 524300, 65536, 2, 393229, 65536, 2, 524301, 65536, 2, 393230, 65536, 2, 524302, 65536, 2, 393231, 65536, 2, 524303, 65536, 2, 16, 65536, 2, 65552, 65536, 2, 131088, 65536, 2, 17, 65536, 2, 65553, 65536, 2, 131089, 65536, 2, 18, 65536, 2, 65554, 65536, 2, 131090, 65536, 2, 19, 65536, 2, 65555, 65536, 2, 131091, 65536, 2, 327696, 65536, 2, 327697, 262144, 0, 196626, 65536, 2, 327698, 65536, 2, 196627, 65536, 2, 262163, 65536, 2, 327699, 262144, 0, 393232, 65536, 2, 458768, 65536, 2, 524304, 65536, 2, 393233, 65536, 2, 458769, 65536, 2, 524305, 65536, 2, 393234, 65536, 2, 458770, 65536, 2, 524306, 65536, 2, 393235, 65536, 2, 458771, 65536, 2, 524307, 65536, 2, 589833, 65536, 2, 589834, 65536, 2, 589842, 65536, 2, 589841, 65536, 2, 589840, 65536, 2, 589839, 65536, 2, 589838, 65536, 2, 589837, 65536, 2, 589836, 65536, 2, 589835, 65536, 2, 589843, 65536, 2, 589824, 65536, 2, 589825, 65536, 2, 589826, 65536, 2, 589827, 65536, 2, 589828, 65536, 2, 589829, 65536, 2, 589830, 65536, 2, 589831, 65536, 2, 589832, 65536, 2, 262147, 65536, 2, 262148, 65536, 2, 327684, 65536, 2, 196614, 65536, 2, 262150, 262144, 0, 262151, 65536, 2, 262152, 65536, 2, 131072, 65536, 2, 458765, 65536, 2, 458766, 65536, 2, 458767, 65536, 2, 262160, 65536, 2, 262161, 65536, 2, 262162, 65536, 2, 196625, 262144, 0, 196624, 65536, 2, 196623, 65536, 2, 196622, 65536, 2, 131086, 65536, 2, 131085, 65536, 2, 196621, 65536, 2)
layer_1/name = "Walls"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array(393216, 262144, 2, 131072, 262144, 4, 196608, 65536, 1, 0, 0, 0, 65536, 0, 2, 1, 65536, 0, 2, 65536, 0, 3, 65536, 0, 4, 65536, 0, 5, 65536, 0, 6, 65536, 0, 7, 65536, 0, 8, 65536, 0, 9, 65536, 0, 10, 65536, 0, 11, 65536, 0, 12, 65536, 0, 13, 65536, 0, 14, 65536, 0, 15, 65536, 0, 16, 65536, 0, 17, 65536, 0, 18, 131072, 0, 19, 196608, 4, 65555, 196608, 4, 131091, 196608, 4, 393235, 65536, 3, 458771, 196608, 4, 524307, 196608, 4, 589843, 196608, 4, 589842, 131072, 3, 589841, 65536, 3, 589840, 65536, 3, 589839, 65536, 3, 589838, 65536, 3, 589837, 65536, 3, 589836, 65536, 3, 589835, 65536, 3, 589834, 65536, 3, 589833, 65536, 3, 589832, 65536, 3, 589831, 65536, 3, 589830, 65536, 3, 589829, 65536, 3, 589828, 65536, 3, 589827, 65536, 3, 589826, 65536, 3, 589825, 65536, 3, 458752, 0, 1, 524288, 0, 2, 589824, 0, 3, 196627, 65536, 0, 65537, 65536, 1, 65538, 65536, 1, 65539, 65536, 1, 65540, 65536, 1, 65541, 65536, 1, 65542, 65536, 1, 65543, 65536, 1, 65544, 65536, 1, 65545, 65536, 1, 65546, 65536, 1, 65547, 65536, 1, 65548, 65536, 1, 65549, 65536, 1, 65550, 65536, 1, 65551, 65536, 1, 65552, 65536, 1, 65553, 65536, 1, 65554, 131072, 1, 262163, 65536, 1, 131090, 131072, 2, 196626, 262144, 3, 262162, 65536, 1, 393234, 262144, 1, 458770, 131072, 1, 524306, 131072, 2)
layer_2/name = "YSort"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(65546, 131072, 4, 65537, 196608, 3, 65553, 196608, 3)

[node name="Color Floor1" parent="." instance=ExtResource("3_nn5kl")]
position = Vector2(33, 64)

[node name="Color Floor2" parent="." instance=ExtResource("3_nn5kl")]
position = Vector2(32, 256)

[node name="Color Floor3" parent="." instance=ExtResource("3_nn5kl")]
position = Vector2(544, 64)

[node name="Color Floor4" parent="." instance=ExtResource("3_nn5kl")]
position = Vector2(544, 256)

[node name="Dungeon4_Transfer" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Dungeon4_Transfer"]
position = Vector2(-22, 160)
shape = SubResource("RectangleShape2D_depdr")

[node name="Dungeon6_Transfer" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Dungeon6_Transfer"]

[node name="Door" parent="." instance=ExtResource("4_ce0g4")]
y_sort_enabled = true
position = Vector2(575, 128)

[node name="Open" parent="Door" index="2"]
visible = false

[node name="Player" parent="." instance=ExtResource("2_sc15h")]
position = Vector2(36, 174)

[connection signal="body_entered" from="Dungeon4_Transfer" to="." method="_on_dungeon_4_transfer_body_entered"]
[connection signal="body_exited" from="Dungeon4_Transfer" to="." method="_on_dungeon_4_transfer_body_exited"]
[connection signal="body_entered" from="Dungeon6_Transfer" to="." method="_on_dungeon_6_transfer_body_entered"]
[connection signal="body_exited" from="Dungeon6_Transfer" to="." method="_on_dungeon_6_transfer_body_exited"]

[editable path="Door"]
